--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,3 +2,5 @@ Django==4.2.10
 djangorestframework==3.15.0
 djangorestframework-simplejwt==5.3.1
 django-cors-headers==4.3.1
+Pillow==11.3.0
+django-filter==25.1
