--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "html2canvas": "^1.4.1",
+    "install": "^0.13.0",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -21,7 +23,8 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.8.0",
     "recharts": "^2.13.3",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
