--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,6 @@ django-filter==25.1
 drf-spectacular==0.27.1
 python-dateutil==2.9.0
 whitenoise==6.9.0
+gunicorn==21.2.0
+uvicorn==0.34.0
+psycopg2-binary==2.9.10
