--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,14 +2,18 @@ upstream backend {
     server backend:8000;
 }
 
-upstream frontend {
-    server frontend:5173;
-}
-
 server {
     listen 80;
     server_name localhost;
 
+    # Configuración para archivos estáticos del frontend
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html;
+    }
+
+    # API endpoints
     location /api/ {
         proxy_pass http://backend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -17,6 +21,7 @@ server {
         proxy_redirect off;
     }
 
+    # Admin de Django
     location /admin/ {
         proxy_pass http://backend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -24,20 +29,13 @@ server {
         proxy_redirect off;
     }
 
+    # Archivos estáticos de Django
     location /static/ {
         alias /app/staticfiles/;
     }
 
+    # Archivos de media de Django
     location /media/ {
         alias /app/media/;
-    }
-
-    location / {
-        proxy_pass http://frontend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
     }
 } 
