--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
-      - 5432:5432
+      - "0.0.0.0:5432:5432"
     volumes:
       - ./db_data:/var/lib/postgresql/data
 
@@ -20,14 +20,13 @@ services:
       dockerfile: Dockerfile
     container_name: django_villanueva_backend
     ports:
-      - "8000:8000"
+      - "0.0.0.0:8000:8000"
     volumes:
       - ./backend:/app
       - ./static_volume:/app/staticfiles
       - ./media_volume:/app/media
     environment:
-      - DEBUG=1
-      - DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
+      - DEBUG=0
     depends_on:
       - db
     command: gunicorn villanueva_project.asgi:application -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000
@@ -41,14 +40,14 @@ services:
       - ./frontend:/app
       - /app/node_modules
     environment:
-      - VITE_API_URL=http://localhost:8000
+      - VITE_API_URL=http://0.0.0.0:8000
     depends_on:
       - backend
 
   nginx:
     image: nginx:alpine
     ports:
-      - "80:80"
+      - "0.0.0.0:80:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./static_volume:/app/staticfiles
