--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,14 +6,7 @@ server {
     listen 80;
     server_name localhost;
 
-    # Configuración para archivos estáticos del frontend
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;
-    }
-
-    # API endpoints
+    # API endpoints (debe ir antes que /admin/)
     location /api/ {
         proxy_pass http://backend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -21,21 +14,32 @@ server {
         proxy_redirect off;
     }
 
-    # Admin de Django
-    location /admin/ {
+    # Archivos estáticos de Django (incluyendo admin)
+    location /static/ {
+        alias /app/staticfiles/;
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Archivos de media de Django
+    location /media/ {
+        alias /app/media/;
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Admin de Django (solo para rutas específicas del admin)
+    location ~ ^/admin/(?!static/|media/) {
         proxy_pass http://backend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
 
-    # Archivos estáticos de Django
-    location /static/ {
-        alias /app/staticfiles/;
-    }
-
-    # Archivos de media de Django
-    location /media/ {
-        alias /app/media/;
+    # Configuración para archivos estáticos del frontend (debe ir al final)
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
 } 
