--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -18,6 +18,6 @@ COPY . .
 EXPOSE 8000
 
 # Collect static files
-RUN python manage.py collectstatic --noinput
+RUN python manage.py collectstatic --noinput --settings=villanueva_project.settings
 
 CMD ["gunicorn", "villanueva_project.asgi:application", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000"]
