--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,8 +28,8 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
-    # Admin de Django (solo para rutas específicas del admin)
-    location ~ ^/admin/(?!static/|media/) {
+    # Admin de Django (solo para rutas específicas del admin de Django)
+    location ~ ^/admin/(static/|media/) {
         proxy_pass http://backend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
