--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
       - ./static_volume:/app/staticfiles
       - ./media_volume:/app/media
     environment:
+      - PYTHONUNBUFFERED=1
       - DEBUG=0
     depends_on:
       - db
