Actualización del Dockerfile para establecer un valor por defecto para `VITE_API_URL` apuntando al proxy de Nginx. Se modificó el comando de inicio del contenedor para copiar artefactos de build al volumen montado y mantener el contenedor activo. Se eliminó el archivo de configuración de Nginx y se realizaron ajustes en el componente `PaymentManagement` para simplificar la carga de imágenes. Se eliminaron líneas innecesarias en `PaymentHistoryView` y `paymentService`.

--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -17,7 +17,8 @@ RUN pnpm install --frozen-lockfile
 COPY . .
 
 # Variables de entorno para Vite (disponibles en build time)
-ARG VITE_API_URL
+# Valor por defecto apuntando al proxy de Nginx
+ARG VITE_API_URL=/api
 ENV VITE_API_URL=$VITE_API_URL
 
 # Construir la aplicación para producción
@@ -32,5 +33,5 @@ FROM alpine:latest AS production
 # Solo mantener los archivos construidos
 COPY --from=builder /app/dist /dist
 
-# Comando para mantener el contenedor corriendo
-CMD ["tail", "-f", "/dev/null"]
+# Al iniciar, copiar artefactos de build al volumen montado /app/dist y mantener contenedor activo
+CMD sh -c "rm -rf /app/dist && mkdir -p /app/dist && cp -r /dist/* /app/dist && tail -f /dev/null"
