Refactor: Se eliminaron las variables de entorno innecesarias del archivo `.gitignore` y se actualizó la configuración de la API para utilizar la variable de entorno `VITE_API_BASE_URL`. Se mejoró la gestión de URLs en varios componentes y servicios, permitiendo una mayor flexibilidad en la configuración del entorno. Además, se realizaron ajustes en el componente `SaleDetails` para optimizar la presentación de la información y se mejoró la lógica de descarga de PDFs en el servicio `PdfResumenPagos`.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,6 +28,7 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - DEBUG=0
+      - IP_BASE_URL=192.168.100.4
     depends_on:
       - db
     command: gunicorn villanueva_project.asgi:application -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000
